'project plan' added.

--- a/docs/engx/0. Foreword.md
+++ b/docs/engx/0. Foreword.md
@@ -24,6 +24,31 @@ tags: [EngX]
       - [Spiral model](#spiral-model)
       - [Agile Framework](#agile-framework)
       - [Scrum Framework](#scrum-framework)
+  - [Project plan](#project-plan)
+    - [Why do you need a plan?](#why-do-you-need-a-plan)
+      - [Productivity - Производительность](#productivity---производительность)
+      - [Delegation](#delegation)
+      - [Organization](#organization)
+      - [Motivation](#motivation)
+    - [How a project plan helps the project manager?](#how-a-project-plan-helps-the-project-manager)
+    - [Simple planning tools](#simple-planning-tools)
+    - [Work Breakdown Structure (WBS)](#work-breakdown-structure-wbs)
+      - [Types of WBS in project management](#types-of-wbs-in-project-management)
+      - [Work breakdown structure hierarchy](#work-breakdown-structure-hierarchy)
+        - [WBS level 0](#wbs-level-0)
+        - [WBS level 1](#wbs-level-1)
+        - [WBS level 2](#wbs-level-2)
+        - [WBS level 3](#wbs-level-3)
+      - [How to create a work breakdown structure?](#how-to-create-a-work-breakdown-structure)
+        - [The 100% rule](#the-100-rule)
+        - [The 8/80 rule](#the-880-rule)
+        - [Work package assignments](#work-package-assignments)
+        - [Unique deliverables](#unique-deliverables)
+        - [Clear deadlines](#clear-deadlines)
+        - [Outcomes over actions](#outcomes-over-actions)
+    - [WBS in Agile project management](#wbs-in-agile-project-management)
+    - [Checklists](#checklists)
+  - [to-do](#to-do)
 
 ## Standards for systems and software engineering
 
@@ -57,9 +82,9 @@ There are other standards:
 
 ### Definitions
 
-The software development life cycle (SDLC) is a framework defining tasks performed at each step in the software development process. SDLC is a structure followed by a development team within the software organization. It consists of a detailed plan describing how to develop, maintain and replace specific software. The life cycle defines a methodology for improving the quality of software and the overall development process.
+`The software development life cycle (SDLC)` is a framework defining tasks performed at each step in the software development process. SDLC is a structure followed by a development team within the software organization. It consists of a detailed plan describing how to develop, maintain and replace specific software. The life cycle defines a methodology for improving the quality of software and the overall development process.
 
-Жизненный цикл разработки программного обеспечения (SDLC) — это структура, определяющая задачи, выполняемые на каждом этапе процесса разработки программного обеспечения. SDLC — это структура, которой придерживается группа разработчиков внутри организации, занимающейся разработкой программного обеспечения. Он состоит из подробного плана, описывающего, как разрабатывать, поддерживать и заменять конкретное программное обеспечение. Жизненный цикл определяет методологию улучшения качества программного обеспечения и всего процесса разработки.
+`Жизненный цикл разработки программного обеспечения (SDLC)` — это структура, определяющая задачи, выполняемые на каждом этапе процесса разработки программного обеспечения. SDLC — это структура, которой придерживается группа разработчиков внутри организации, занимающейся разработкой программного обеспечения. Он состоит из подробного плана, описывающего, как разрабатывать, поддерживать и заменять конкретное программное обеспечение. Жизненный цикл определяет методологию улучшения качества программного обеспечения и всего процесса разработки.
 
 The software development life cycle is also known as the software development process.
 
@@ -508,3 +533,221 @@ Phases of the Scrum model:
 - Ежедневные встречи часто утомляют команду;
 - Если кто-то из команды уходит до окончания проекта, это может оказать огромное негативное влияние на проект;
 - Сложно добиться нужного качества конечного результата, должен быть построен автоматизированный процесс всестороннего тестирования промежуточных результатов и конечного результата.
+
+## Project plan
+
+### Why do you need a plan?
+
+У любого проекта должен быть план.
+
+Причины:
+
+- Productivity - Производительность,
+- Delegation - Делегирование,
+- Organization - Организация,
+- Motivation - Мотивация.
+
+#### Productivity - Производительность
+
+Проекты повторяются:
+
+- Один пресейл проект (например, обработка RFP на онлайн тарификатор от MNO 'Alfa') мало чем отличается от другого проекта (обработка RFP на онлайн тарификатор от MNO 'Beta'),
+- Один проект разработки Feature 100500 мало чем отличается от другого проекта разработки Feature 100499.
+
+Однако даже если одна и те же задача повторяется и мы выполняли ее 100500 раз, она по-прежнему является важной частью рабочего процесса, и ее пропуск или пренебрежение могут нанести вред всему процессу.
+
+Использование в новом проекте плана старого аналогичного проекта:
+
+- сокращает время на составление плана нового проекта,
+- гарантирует, что команда ничего не забудет, не пропустит, уделит одинаковое внимание всем этапам, всем задачам проекта.
+
+#### Delegation
+
+Создавая список дел, PM (project manager) анализирует свой проект, разбивая его на этапы\задачи, анализируя и расставляя их по приоритетности.
+
+В итоге PM получает четкий план того, что именно следует сделать, чтобы обеспечить успех, а потом `делегирует` команде задачи и подзадачи, а сам уделяет больше внимания своим менеджерским задачам.
+
+#### Organization
+
+Создание списка дел для одноразового проекта или переиспользование списка дела для повторяющихся проектов позволяет PM-у получить четкое представление о шагах, которые необходимо предпринять, и точных действиях, которые необходимо выполнить. Пожалуй, это самый простой и удобный способ создать схему с полным контролем над ходом проекта.
+
+План проекта - руководство к действию для команды на протяжении всего проекта, а PM получает:
+
+- возможность легко отслеживать выполнение каждого шага,
+- и гарантию, что будет сделано все, что необходимо.
+
+#### Motivation
+
+Рутинные задачи очень важны, но многие считают, что они скучны. Люди не любят делать что-то, что их утомляет. Поскольку вы не можете избавиться от повторяющихся процессов, вы все равно можете сделать их увлекательными с помощью плана работ.
+
+Каждый выполненный пункт плана в теории дает нам ощущение успеха, очередного достижения, сокращает список невыполненых работ по проекту.
+
+Еще немного, еще чуть-чуть... Задача PM-а постоянно актуализировать план, чтобы команда видела, ощущала, что приближается к цели.
+
+### How a project plan helps the project manager?
+
+A plan is a tool for breaking down large complex projects, visualizing their scope, and managing them in an organized manner. It will also help you be more accurate when:
+
+- Establishing dependencies between the tasks,
+- Assessing and mitigating potential risks,
+- Estimating the costs of your project,
+- Developing a project schedule,
+- Determining a project timeline,
+- Planning project resources,
+- Assigning tasks and roles,
+- Tracking the progress.
+
+### Simple planning tools
+
+Два простых средства для представления плана и для работы с планом в течение всего проекта:
+
+- Work breakdown structure (WBS),
+- Checklist, to-do list (контрольный список) как частный случай WBS.
+
+### Work Breakdown Structure (WBS)
+
+`Work breakdown structure (WBS)` в управлении проектами визуально описывает сложный и многоэтапный проект, начиная с наиболее всеобъемлющей цели и заканчивая самой маленькой частью результатов.
+
+Пример:
+
+[plant uml code of wbs example](<../../assets/puml/wbs.puml>)
+
+![wbs example](<../../assets/puml/wbs.png>)
+
+#### Types of WBS in project management
+
+There are two types of WBS:
+
+- deliverable-based
+- and phase-based.
+
+These two differ in how they identify the project structure elements in the first level of the WBS.
+
+Эти два варианта различаются тем, как они идентифицируют элементы структуры проекта на первом уровне WBS.
+
+`A deliverable-based WBS` visualizes the relationship between the project deliverables (e.g., a product or service) and the scope of the work. It breaks down the project scope into control accounts and divides it into project work packages and tasks.
+
+WBS, основанная на результатах, визуализирует взаимосвязь между результатами проекта и объемом работ:
+
+- есть контрольные точки проекта,
+- между контрольными точкам выполняются определенные работы, решаются определенные задачи проекта.
+
+`A phase-based WBS` typically breaks the first level down into five elements (initiation, planning, execution, control, closeout) and then identifies deliverables within those phases.
+
+Поэтапная WBS обычно разбивает первый уровень на пять элементов (инициирование, планирование, выполнение, контроль, закрытие), а затем определяет результаты в рамках этих этапов.
+
+#### Work breakdown structure hierarchy
+
+When it comes to the hierarchy, work breakdown structures usually consist of a minimum of three levels.
+
+WBS - иерархическая структура, обычно имеет 3-4 уровня.
+
+##### WBS level 0
+
+The first (top) level of the WBS is the project title and the final deliverable.
+
+Первый (верхний) уровень WBS — это название проекта и конечный результат.
+
+##### WBS level 1
+
+The second WBS level is control accounts. Control accounts is a management control point that groups work packages and measures their status. As such, it controls areas of the project scope. Control accounts include project major parts, phases, systems, or features the customer expects you to deliver.
+
+Второй уровень WBS – это контрольные точки, точки управления, которые группируют пакеты работ для измеряния статуса этих пакетов. Контрольная точка контролирует часть проекта.
+
+##### WBS level 2
+
+The third WBS level is work packages. Each work package in a WBS is a deliverable (a noun), not an action (a verb). In other words, a deliverable is not what your team will be doing but what the customer or other stakeholders is going to get when the package is completed (outcome). When the work packages come together, they constitute the control accounts level.
+
+Третий уровень WBS – это пакеты работ. Каждый пакет — это результат (существительное), а не действие (глагол). Другими словами, конечный результат — это не то, что будет делать ваша команда, а то, что клиент или другие заинтересованные стороны получат, когда пакет будет завершен (результат). Когда пакеты работ объединяются, они образуют уровень контрольных счетов.
+
+It is important to note that work packages must be small enough to allow you to manage, coordinate, execute and monitor them easily. After all, this is the main reason for creating a WBS in the first place. And while you are at the work packages level, you also can define the time each deliverable will require for completion (in hours) and their costs (to calculate the cost of the project).
+
+Важно отметить, что пакеты работ должны быть достаточно небольшими, чтобы вы могли легко ими управлять, координировать, выполнять и контролировать. В конце концов, это основная причина создания WBS. И пока вы находитесь на уровне пакетов работ, вы также можете определить время, которое потребуется для завершения каждого результата (в часах) и их стоимость (для расчета стоимости проекта).
+
+##### WBS level 3
+
+The last one of the WBS levels is activities. The completion of the set of activities leads to the delivery of the individual work package.
+
+Последний уровень WBS — это виды деятельности. Завершение комплекса мероприятий приводит к сдаче индивидуального комплекса работ.
+
+#### How to create a work breakdown structure?
+
+To use a work breakdown structure in project management effectively, it is important to arrange all the elements of a project in accordance with the 100% rule. For this purpose, you can use a variety of tools, including spreadsheets.
+
+Чтобы эффективно использовать WBS в управлении проектами, важно расположить все элементы проекта в соответствии с правилом 100%. Для подсчетов можно использовать различные инструменты, в том числе электронные таблицы.
+
+##### The 100% rule
+
+One of the most critical work breakdown structure principles is the 100% (one-hundred percent) rule. It states that the sum of the work spent on the child elements (e.g., a set of tasks) must be 100% equal to the work effort assigned to the parent element (e.g., a work package). The 100% rule applies to all WBS levels, and the total percentage sum cannot be any higher or lower.
+
+Одним из наиболее важных принципов декомпозиции работ является правило 100%. В нем говорится, что сумма работ, затраченных на дочерние элементы, должна быть на 100 % равна трудозатратам, назначенным родительскому элементу. Правило 100 % применяется ко всем уровням WBS.
+
+##### The 8/80 rule
+
+The 8/80 rule will help you decide whether a given work package is small enough. The 8/80 means that a WBS work package should not take less than 8 (eight) hours of effort and a the same time, not more than 80 (eighty).
+
+Правило 8/80 поможет вам решить, достаточно ли мал данный пакет работ. 8/80 означает, что пакет работ WBS не должен занимать менее 8 (восьми) часов усилий и в то же время не более 80 (восемьдесят) часов.
+
+##### Work package assignments
+
+You should assign each work package to a specific team or individual. If you create your WBS right, there will be no overlap in work and responsibilities.
+
+Вы должны поручить каждый пакет работ конкретной команде или отдельному человеку. Если вы правильно создадите свою WBS, не будет дублирования в работе и обязанностях.
+
+##### Unique deliverables
+
+You must not add to your WBS any work package, task, or other work more than once. Otherwise, you will violate the 100% rule and receive incorrect effort and cost calculation results.
+
+Вы не должны добавлять в свою WBS какой-либо рабочий пакет, задачу или другую работу более одного раза. В противном случае вы нарушите правило 100% и получите неправильные результаты расчета трудозатрат и затрат.
+
+##### Clear deadlines
+
+If you set deadlines for the work items at every WBS level, you will be able to estimate the overall timeline for your project. It will help you keep your team on track, communicate with stakeholders, and ensure timely project delivery.
+
+Если вы установите сроки для рабочих элементов на каждом уровне WBS, вы сможете оценить общий график вашего проекта. Это поможет вам поддерживать работу вашей команды, общаться с заинтересованными сторонами и обеспечивать своевременную реализацию проекта.
+
+##### Outcomes over actions
+
+When naming project deliverables, try to use nouns rather than verbs. It does not mean that you cannot use verbs at all. But nouns are preferable.
+
+Называя результаты проекта, старайтесь использовать существительные, а не глаголы. Это не значит, что вы вообще не можете использовать глаголы, но существительные [предпочтительнее](https://www.pmi.org/learning/library/work-breakdown-structure-basics-5919).
+
+### WBS in Agile project management
+
+There is a common belief that WBS goes well only with traditional project management methodologies such as Waterfall. Classic methodologies, in contrast to Agile methodologies, suit very well projects whose goals are unlikely to change. Because of that, a work breakdown structure is thought not to be flexible enough to match the Agile iterative nature.
+
+Существует распространенное мнение, что WBS хорошо сочетается только с традиционными методологиями управления проектами, такими как Waterfall. Классические методологии, в отличие от Agile, очень хорошо подходят для проектов, цели которых вряд ли изменятся. По этой причине WBS считается недостаточно гибкИм, чтобы соответствовать итеративной природе Agile.
+
+But that is not entirely true. Just think about it—if a WBS represents all the work that your teams need to put into the project, then a product backlog typical to Agile projects is sort of a WBS, too. In Agile, you break down large epics or features into smaller units (user stories) as you are about to develop them and control them during the sprints. In Waterfall, you break down the entire project into smaller units (work packages and tasks) upfront and control them throughout the project.
+
+Но это не совсем так. Просто подумайте: если WBS представляет всю работу, которую ваши команды должны вложить в проект, то типичный для Agile-проектов журнал невыполненных работ тоже является своего рода WBS. В Agile вы разбиваете большие эпики или функции на более мелкие единицы (пользовательские истории), когда собираетесь их разрабатывать и контролировать во время спринтов. В Waterfall вы заранее разбиваете весь проект на более мелкие части (рабочие пакеты и задачи) и контролируете их на протяжении всего проекта.
+
+So in this sense, a work breakdown structure is the equivalent of the product backlog. However, please keep in mind that in agile projects, the scope of work comes from the backlog and you do not know what you will be working on straight away. This is in contrast to the Waterfall methodology where you have defined the entire scope of the project before the project execution has begun.
+
+Таким образом, в этом смысле иерархическая структура работ является эквивалентом журнала невыполненных работ.
+
+### Checklists
+
+Контрольный список (checklist), список дел (to-do list) практически тоже самое, что и WBS, выглядит чуть иначе.
+
+Пример:
+
+- Business Process Modelling WBS
+  - Launch the project `Status` waiting for a Big Boss `Deadline`: 2023-09-08 `Accountable`: Person 1 `Responsible`: Person 1, Person 2  
+    - Complete Stakeholder Research
+    - Initial Implementation Plan
+  - Design phase
+    - Model of AsIs Processes Completed
+      - Model of AsIs Processes Completed1
+      - Model of AsIs Processes Completed2
+    - Measure AsIs performance metrics
+    - Identify Quick Wins
+  - Complete innovate phase
+
+## to-do
+
+Use Case
+
+Functional Decomposition
+
+Design First \ Contract First
